# audiobooks

./: .gitignore  README.md  epub_process.py.lprof  lexicon_tool.py  main.py  pyproject.toml
app/: app.py  audio.py  book.py  epub_diagnostics.py  main.py  processor.py  project.py  tester.py  tts.py  utils.py
configs/: aoab_config.yaml  aoab_config_linux.yaml  grimgar_config.yaml  mt_config.yaml  rezeroex_config.yaml  test_config.yaml
lexicons/: AoaB.json  mushoku_tensei.json  rezero_lexicon.json
lexicons/g2g/: AoaB.lex  AoaB.yaml  diagnostics.lex  exclamations.yaml  symbols.lex
lexicons/g2p/: AoaB.lex  AoaB.yaml  diagnostics.lex
lexicons/lex/: AoaB.lex
old/: audiblez_batch.py  epub_scratch.py
planning/: project.md  ttsproject.md
scripts/: epub_diagnostics.py  legacy_convert.py  lexicon_tool.py  test_lexicons.py  tester.py
src/audiobooks/: __init__.py  app.py
src/audiobooks/cli/: cli.py
src/audiobooks/core/: __init__.py  audio.py  book.py
src/audiobooks/project/: __init__.py  project.py  spec.py
src/audiobooks/tts/: __init__.py  blocks.py  lexicon.py  pipeline.py  tts.py
src/audiobooks/utils/: __init__.py  cli.py  files.py  utils.py
test_data/: restoreTestData.py
test_data/current/childrens-literature/: fulltext.txt  project.yaml
test_data/src/: scratch.lex
tests/: epub_diagnostics.py  g2p_tests.py  lexicon_tool.py  test_book.py
